manifests/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: gatus
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gatus
