manifests/gatus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  namespace: gatus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Gatus"
    gethomepage.dev/description: "Status & Uptime"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "gatus.png"
    gethomepage.dev/weight: "30"
    gethomepage.dev/widget.type: "gatus"
    gethomepage.dev/widget.url: "https://status.elmstreet79.de"
spec:
  ingressClassName: traefik
  rules:
    - host: status.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  number: 8080
